--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dev_dependencies:
 # The following section is specific to Flutter.
 flutter:
   assets:
-    - images/start.jpg
+    - images/signup.jpg
     - images/login.jpg
     - images/welcome.jpg
 
